--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,7 @@
 .DS_Store
 
 # Application
-web/app/composer.json
-web/app/composer.lock
-web/app/vendor/
-web/app/doc/
-web/app/report/
+web/app/
 data/
 
 # PHPStorm
