--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,14 @@
-version: '3'
+version: '3.6'
 services:
     web:
-        image: nginx:alpine
-        volumes:
-            - "./etc/nginx/default.conf:/etc/nginx/conf.d/default.conf"
-            - "./etc/ssl:/etc/ssl"
-            - "./web:/var/www/html"
-            - "./etc/nginx/default.template.conf:/etc/nginx/conf.d/default.template"
+        build: ./nginx
+        volumes:            
+            - "./web/public:/var/www/html"
         ports:
             - "8000:80"
             - "3000:443"
         environment:
             - NGINX_HOST=${NGINX_HOST}
-        command: /bin/sh -c "envsubst '$$NGINX_HOST' < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
         restart: always
         depends_on:
             - php
@@ -20,14 +16,11 @@ services:
     php:
         image: nanoninja/php-fpm:${PHP_VERSION}
         restart: always
+        ports:
+            - "9000:9000"
         volumes:
             - "./etc/php/php.ini:/usr/local/etc/php/conf.d/php.ini"
-            - "./web:/var/www/html"
-    composer:
-        image: "composer"
-        volumes:
-            - "./web/app:/app"
-        command: install
+            - "./web/public:/var/www/html"
     myadmin:
         image: phpmyadmin/phpmyadmin
         container_name: phpmyadmin
