--- a/nginx/wordpress.conf
+++ b/nginx/wordpress.conf
@@ -11,21 +11,9 @@ server {
 
     root /var/www/html;
 
-#	location ~ \.php$ {
-#
-#		fastcgi_pass   127.0.0.1:9000;
-#
-#		fastcgi_index  index.php;
-#
-#		fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-#
-#		include    fastcgi_params;
-#
-#	}
-
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/var/run/php/php5.6-fpm.sock;
+        fastcgi_pass  php:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         fastcgi_index index.php;
