--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ NGINX_HOST=obituare.local
 PHP_VERSION=5.6.32
 
 # MySQL
-MYSQL_VERSION=5.7.22
+MYSQL_VERSION=5.5.54
 MYSQL_HOST=mysql
-MYSQL_DATABASE=test
+MYSQL_DATABASE=obituare
 MYSQL_ROOT_USER=root
 MYSQL_ROOT_PASSWORD=root
 MYSQL_USER=dev
